--- a/popspotzy-frontend/src/app/globals.css
+++ b/popspotzy-frontend/src/app/globals.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@300;400;500;600;700&display=swap');
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind utilities;
 
 :root {
   --foreground-rgb: 0, 0, 0;
